force-app-chapter-4/main/default/objects/Monthly_Revenue_Event__c/Monthly_Revenue_Event__c.object-meta.xml
<CustomObject>
    <label>Monthly Revenue Event</label>
    <nameField>
        <label>Monthly Revenue Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Monthly Revenue Events</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>