force-app-chapter-4/main/default/objects/Monthly_Revenue_Event__c/fields/Account__c.field-meta.xml
<CustomField>
  <fullName>Account__c</fullName>
  <label>Account</label>
  <referenceTo>Account</referenceTo>
  <relationshipLabel>Monthly Revenue Events</relationshipLabel>
  <relationshipName>MonthlyRevenueEvents</relationshipName>
  <relationshipOrder>1</relationshipOrder>
  <type>MasterDetail</type>
</CustomField>