force-app-chapter-4/main/default/objects/Monthly_Revenue_Event__c/fields/Month__c.field-meta.xml
<CustomField>
    <fullName>Month__c</fullName>
    <label>Month</label>
    <type>Date</type>
</CustomField>