force-app-chapter-4/main/default/objects/Monthly_Revenue_Event__c/fields/Opportunity__c.field-meta.xml
<CustomField>
  <fullName>Opportunity__c</fullName>
  <label>Opportunity</label>
  <referenceTo>Opportunity</referenceTo>
  <relationshipLabel>Monthly Revenue Events</relationshipLabel>
  <relationshipName>MonthlyRevenueEvents</relationshipName>
  <relationshipOrder>0</relationshipOrder>
  <type>MasterDetail</type>
</CustomField>