force-app-chapter-4/main/default/objects/Monthly_Revenue_Event__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UP</fullName>
            </value>
            <value>
                <fullName>NEW</fullName>
            </value>
            <value>
                <fullName>MRR</fullName>
            </value>
            <value>
                <fullName>DOWN</fullName>
            </value>
            <value>
                <fullName>CHURN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>