force-app-chapter-4/main/default/objects/Monthly_Revenue_Event__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Month__c</columns>
    <columns>Type__c</columns>
    <columns>Amount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>